[package]
authors = ["Quan Tran <quan@shousio.com>"]
categories = [
  "development-tools",
  "development-tools::cargo-plugins",
]
description = "Cargo subcommands that integrate the Compiler Interrupts to the package"
edition = "2018"
keywords = ["assembly", "llvm-ir", "plugins", "cargo", "subcommand"]
license = "MIT"
name = "cargo-compiler-interrupts"
readme = "README.md"
repository = "https://github.com/bitslab/cargo-compiler-interrupts"
version = "3.0.1"

[dependencies]
anyhow = "1.0"
cargo-util = {version = "0.1.0", path = "crates/cargo-util"}
cargo_metadata = "0.13"
clap = "3.0.0-beta.2"
dirs = "3.0"
faccess = "0.2"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"

[[bin]]
name = "cargo-build-ci"
path = "src/bin/build.rs"

[[bin]]
name = "cargo-run-ci"
path = "src/bin/run.rs"

[[bin]]
name = "cargo-lib-ci"
path = "src/bin/library.rs"
