[package]
authors = ["Quan Tran <quan@shousio.com>"]
categories = [
  "development-tools",
  "development-tools::cargo-plugins",
]
description = "Cargo subcommands that integrate the Compiler Interrupts to the package"
edition = "2021"
keywords = ["plugins", "cargo", "subcommand", "llvm-ir", "interrupt"]
license = "MIT"
name = "cargo-compiler-interrupts"
readme = "README.md"
repository = "https://github.com/bitslab/cargo-compiler-interrupts"
version = "4.0.1"

[dependencies]
anyhow = "1.0"
cargo-util = "0.2"
chrono = "0.4"
clap = {version = "4.0", features = ["derive"]}
colored = "2.0"
crossbeam-utils = "0.8"
dirs = "4.0"
indicatif = "0.17"
md5 = "0.7"
num_cpus = "1.13"
ron = "0.8"
semver = "1.0"
serde = "1.0"
terminal_size = "0.2"
thiserror = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = "2.4"
url = "2.2"
walkdir = "2.3"

[[bin]]
name = "cargo-build-ci"
path = "src/bin/build.rs"

[[bin]]
name = "cargo-run-ci"
path = "src/bin/run.rs"

[[bin]]
name = "cargo-lib-ci"
path = "src/bin/library.rs"
