[package]
authors = ["The Cargo Project Developers"]
description = "Miscellaneous support code used by Cargo."
edition = "2018"
homepage = "https://github.com/rust-lang/cargo"
license = "MIT"
name = "cargo-util"
repository = "https://github.com/rust-lang/cargo"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
filetime = "0.2"
libc = "0.2"
log = "0.4"
same-file = "1.0"
shell-escape = "0.1"
tempfile = "3.2"
walkdir = "2.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = {version = "0.9", features = ["mac_os_10_7_support"]}

[target.'cfg(windows)'.dependencies]
miow = "0.3"
winapi = {version = "0.3", features = ["consoleapi", "minwindef"]}
